# DAC-VAN

./: .gitignore  README.md  SIEM_Config.json  pyproject.toml  requirements.txt
data/: config.json  config.xml
src/dacvan/: atomic_handler.py  client.py  config.py  elastic_handler.py  logic_agent.py  siem_handler.py  sigma_parser.py  splunk_handler.py  variant_agent.py
tests/: conftest.py  test_atomic_handler.py  test_client.py  test_logic_agent.py  test_sigma_parser.py  test_splunk_handler.py  test_variant_agent.py
